# portal

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.md
portal/: __init__.py  __main__.py  allowlist.py  auth.py  config.py  db.py  discovery.py  indexer.py  media_types.py  path_registry.py  services.py  thumbnailer.py
portal/api/: __init__.py  browse.py  libraries.py  metadata.py  search.py  stream.py  thumbnail.py
portal/ui/: __init__.py  routes.py
portal/ui/static/: index.html
